<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Social Slack</string>
    <string name="block_canary_display_activity_label" translatable="false">Social Slack block canary</string>
    <string name="leak_canary_display_activity_label" translatable="false">Social Slack leak canary</string>

    <string name="welcome_to">Welcome to</string>
    <string name="designed_with_love_by">Designed with love by</string>
    <string name="netguru">Netguru</string>
    <string name="colourful">Colourful</string>
    <!-- TODO 24.08.2017 replace for the correct email -->
    <string name="feedback_email">someemail@netguru.co</string>
    <string name="feedback_email_subject">Feedback about Slack Social</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_apply">Apply</string>
    <string name="action_send">Send</string>

    // Menu tabs
    <string name="menu_home">Home</string>
    <string name="menu_channels">Channels</string>
    <string name="menu_users">Users</string>
    <string name="menu_profile">Profile</string>

    <string name="login_error_msg">Authorization error</string>

    <string name="error_msg">Server error</string>

    <string name="place">place</string>
    <string name="number_of_messages">No. of messages</string>
    <string name="number_of_mentions">No. of mentions</string>

    <string name="total_messages">Total messages</string>
    <string name="rank">Rank</string>

    <string name="error_profile_picture">Error while fetching the profile picture</string>
    <string name="error_counting_statistics">Error while counting statistics</string>

    // Filter view
    <string name="filter_by">Filter by</string>
    <string name="channel_we_are_mentioned_the_most">Channel we are mentioned the most</string>
    <string name="channel_we_are_most_active">Channel we are most active</string>
    <string name="most_active_channel_filter">Most active channel</string>
    <string name="categories">Categories</string>
    <string name="error_filter_option">Error while changing filter option</string>
    <string name="person_we_write_most">Person who we write the most</string>
    <string name="person_writes_to_us_most">Person who writes to us the most</string>
    <string name="person_we_talk_most">Person who we talk the most</string>

    <string name="messages">messages</string>
    <string name="mentions">mentions</string>
    <string name="statistic_messages_sent">messages sent\nby you on channels</string>
    <string name="statistic_mentions">mentions\non channels</string>
    <string name="statistic_private_messages">total number\nof private messages</string>
    <string name="statistic_sent_private_messages">sent\nprivate messages</string>
    <string name="statistic_total_read_messages">total number\nof read messages</string>
    <string name="statistic_received_private_messages">received\nprivate messages</string>

    // Channel statistics
    <string name="channel_statistics_total_of_here">Total of @here</string>
    <string name="channel_statistics_your_mentions">Your mentions</string>
    <string name="channel_statistics_share_with_channel">Share with channel</string>

    <string name="channels">Channels</string>
    <string name="welcome_back_mock">Welcome back</string>
    <string name="statistics">Statistics</string>
    <string name="users">Users</string>
    <string name="channel_hashtag">#%s</string>
    <string name="error_sorting_channels">There was an error while sorting channels</string>

    // User statistics
    <string name="share_with_user">Share with user</string>

    // Share
    <string name="share_love">Share the love!</string>
    <string name="share_recon_this">Hey %s, recon this:</string>
    <string name="share_talk_more">talk with me more!</string>
    <string name="share_most_talkative_channel">we are the most talkative channel!</string>
    <string name="share_most_talkative_user">we talk the most often!</string>
    <string name="share_send_statistics_to">You are about to send this statistics to\n%s</string>
    <string name="thanks_for_sending_statistics">Thank you for sending statistics to\n%s</string>
    <string name="thank_you">Thank you!</string>
    <string name="ta_da">Ta-da!</string>
    <string name="private_messages">Private messages</string>
    <string name="received_messages">Received messages</string>
    <string name="sent_messages">Sent messages</string>
    <string name="total_sent_received">total (sent/received)</string>
    <string name="days_streak">days streak</string>

    // Profile
    <string name="colour_scheme">Colour scheme</string>
    <string name="log_out">Log out</string>
    <string name="send_us_feedback">Send us feedback</string>
    <string name="error_changing_theme">"Error while changing the theme"</string>
    <string name="error_getting_team_info">"Error while getting team's info"</string>
    <string name="error_login_out">"Error while login out"</string>
    <string name="error_send_feedback">Error while sending feedback. Email client not found.</string>
    <string name="first_name_last_name">%s %s</string>
    <string name="username">\@%s</string>
    <string name="slack_domain">%s.slack.com</string>

    // Search
    <string name="search_hint">Search users &amp; channels</string>
    <string name="search_title">Search users &amp; channels</string>

    <string name="fragment_login_description">Hiya! This is Slack Social. \n Keeping track of your social life on Slack, but not in a creepy way!</string>
    <string name="fragment_fetch_description">The App is loading</string>
    <string name="fragment_fetch_error">Status: unwell. Please refresh.</string>
    <string name="refresh">Refresh</string>
</resources>
