<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/modalTop2Drawable">

        <TextView
            android:id="@+id/shareConfirmationItemNameText"
            style="@style/Font20.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/share_confirmation_text_margin_top"
            tools:text="#android-internals" />

        <ImageButton
            android:id="@+id/shareConfirmationCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_default"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/close" />
    </FrameLayout>

    <TextView
        style="@style/Font28.PrimaryDark.RobotoLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ta_da" />

    <TextView
        android:id="@+id/shareConfirmationThankYouText"
        style="@style/FontSmall.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:gravity="center"
        android:lines="2"
        android:lineSpacingExtra="@dimen/line_spacing"
        tools:text="@string/thanks_for_sending_statistics" />

    <Button
        android:id="@+id/shareConfirmationThankYouBtn"
        style="@style/ActionButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_button_height"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/thank_you" />
</LinearLayout>