<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shareRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/modal_top1">

        <TextView
            style="@style/FontLarge.LightGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/share_love" />

        <ImageButton
            android:id="@+id/shareCloseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/margin_default"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/close" />
    </FrameLayout>

    <!-- TODO 26.07.2017 All Hardcoded Strings will be removed in task connected with API integration -->
    <TextView
        android:id="@+id/shareChannelNameTextView"
        style="@style/FontMedium.PrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Hey #android-internals, recon this:" />

    <TextView
        android:id="@+id/shareChannelStatusTextView"
        style="@style/FontMedium.Orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="talk with me more!"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default">

        <TextView
            style="@style/Font12.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/place"
            android:textAllCaps="true" />

        <TextView
            style="@style/Font12.Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/number_of_messages"
            android:textAllCaps="true" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shareRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_default"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:src="@drawable/ic_more_vert_grey" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_default">

        <include
            android:id="@+id/shareLastItem"
            layout="@layout/item_channels" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/FontSmall.Grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:lines="2"
            android:text="@string/send_statistics_to" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default">

            <Button
                android:id="@+id/shareSendButton"
                style="@style/FontMedium.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rounded_button_corners_gradient_gray"
                android:text="@string/action_send"
                android:textAllCaps="false" />

            <ProgressBar
                android:id="@+id/shareLoadingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>